<resources>
    <string name="app_name">EatFood</string>

    <!-- Strings related to login -->
    <!--<string name="prompt_email">Email</string>-->
    <string name="prompt_account">Account</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions." </string>
    <string name="account">帳號</string>
    <string name="password">密碼</string>
    <string name="account_input">輸入帳號</string>
    <string name="password_input">輸入密碼</string>
    <string name="check_pwd">確認密碼</string>
    <string name="telephone">手機號碼</string>
    <string name="sex">性別</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="address">地址</string>
    <string name="restaurant_category">種類</string>
    <string name="restaurant_name">餐廳</string>
    <string name="restaurant_branch">分店</string>
    <string name="restaurant_address">地址</string>
    <string name="eat_date">日期</string>
    <string name="select_date">選擇日期</string>
    <string name="eat_sex">性別限制</string>
    <string name="eat_number">人數限制</string>
    <string name="description">說明</string>
    <string name="write_description">說明...</string>
    <string name="check_post">確認送出</string>
    <!--導覽-->
    <string name="title_home">主頁面</string>
    <string name="title_dashboard">貼文</string>
    <string name="title_notifications">歷史紀錄</string>
    <string name="title_person">個人主頁</string>

    <!--&lt;!&ndash; TODO: Remove or change this placeholder text &ndash;&gt;-->
    <!--<string name="hello_blank_fragment">Home</string>-->
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_main">MainActivity</string>



    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>


</resources>
